# Glint

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  ROADMAP.md  arch.md  build.bat  compile_shaders.bat  configure.bat  log.txt  run.bat
ext/: CMakeLists.txt
ext/arcball_camera/: arcball_camera.h
ext/tinyobjloader/: tiny_obj_loader.h
shaders/: normal_mapping.frag  normal_mapping.vert  quad.vert  shadow_mapping.frag  simple.frag  simple.vert  simple_uv.vert  standard_shading.frag  standard_shading.vert  standard_shading_alpha.frag  wobbly_texture.frag
src/: app.cpp  logger.h  main.cpp  triangle.cpp2  vulkan_context.h  window.cpp  window.h
src/Core/: Camera.cpp  Camera.h  GuiLayer.h  IndexBuffer.h  Logger.cpp  Logger.h  Mesh.cpp  Renderer.cpp  Renderer.h  SceneBase.h  SceneManager.h  ScopedTimer.h  Shader.cpp  Shader.h  Sysinfo.cpp  Texture.cpp  Texture.h  VBOIndex.cpp  VBOIndex.h  VertexArray.h  VertexBuffer.h  Window.h
src/Graphics/: Camera.cpp  Camera.h  FrameBuffer.h  IndexBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h
src/Scenes/: BaseScene.h  BasicShading.h  CubeScene.h  NormalMapping.h  QuadScene.h  RenderToTexture.h  Scene2.h  ShadowMapping.h  UVCubeScene.h  VBOIndexing.h  VertexArrayLayout.h
src/core/: window.cpp  window.h
src/glint_core/: CMakeLists.txt
src/glint_core/core/: camera.cpp  camera.h  common.h  config.cpp  config.h  logger.h  utils.cpp  utils.h  window.h
src/glint_core/renderer/: camera.h  command_manager.cpp  command_manager.h  descriptor.cpp  descriptor.h  initializers.h  mesh.cpp  mesh_factory.cpp  pipeline.cpp  pipeline.h  render_pass.cpp  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  synchronization_manager.cpp  synchronization_manager.h  texture.cpp  texture.h  ubo_data.h  vertex.cpp  vertex.h  vk_context.cpp  vk_context.h  vk_tools.cpp  vk_tools.h  vk_utils.cpp  vk_utils.h
src/glint_ui/: CMakeLists.txt  imgui_manager.cpp  imgui_manager.h
src/minimal/: CMakeLists.txt  triangle.cpp2
src/minimal/cube/: main.cpp
src/minimal/triangle/: main.cpp
src/renderer/: command_manager.cpp  command_manager.h  descriptor.cpp  descriptor.h  mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  synchronization_manager.cpp  synchronization_manager.h  texture.cpp  texture.h  vertex.cpp  vertex.h  vk_context.cpp  vk_context.h  vk_utils.cpp  vk_utils.h  vulkan_context.cpp  vulkan_context.h
src/samples/: CMakeLists.txt  cube_sample.cpp  cube_sample.h  dynamic_uniform_buffer.cpp  dynamic_uniform_buffer.h  main.cpp  rotating_sample.cpp  rotating_sample.h  sample.cpp  sample.h  sample_main.cpp  sample_manager.cpp  sample_manager.h  textured_quad.cpp  textured_quad.h
src/shaders/: CMakeLists.txt  basic.vert  basic_tex.frag  quad.vert  shader.vert
src/ui/: imgui_manager.h
tests/: camera_test.cpp  test_cfg.h  testing.cpp
